--- a/src/pages/draft/draft.css
+++ b/src/pages/draft/draft.css
@@ -8,6 +8,13 @@ sff-draft {
 
 .cnt-season-sel {
   margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.cnt-season-sel > select {
+  max-width: 10rem;
 }
 
 .cnt-draft-info {
