--- a/src/pages/transactions/transactions.css
+++ b/src/pages/transactions/transactions.css
@@ -6,7 +6,14 @@ sff-transactions {
 }
 
 .cnt-season-sel {
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.cnt-season-sel > select {
+  max-width: 10rem;
 }
 
 .ctn-transactions {
