--- a/src/pages/util/button.css
+++ b/src/pages/util/button.css
@@ -1,49 +1,42 @@
 .btn,
 .btn-sml,
 .btn-round {
-  --btn-hover-border-color: var(--dk-primary-color, var(--lt-primary-color));
-  --btn-focus-box-shadow: 0 0 0 0.25rem hsla(300, 100%, 93%, 0.35);
-  background-color: var(--dk-primary-color, var(--lt-primary-color));
-  border: 1px solid transparent;
-  border-radius: 2px;
-  box-shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 20%);
+  --btn-hover-border-color: var(--bg-primary);
+  --btn-focus-box-shadow: var(--ring-primary);
+  background-color: var(--bg-primary);
+  border: var(--border-invisible);
+  border-radius: var(--rounded-sm);
+  box-shadow: var(--shadow);
   cursor: pointer;
   display: inline-block;
   font: inherit;
   font-weight: bold;
-  padding: 0.3rem 0.75rem;
+  padding: var(--py-0_3) var(--px-0_75);
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
   text-align: center;
-  transition: border-color 0.15s linear, box-shadow 0.15s linear,
-    filter 0.15s linear;
+  transition: border-color var(--duration-150) linear,
+    box-shadow var(--duration-150) linear, filter var(--duration-150) linear;
   vertical-align: middle;
 }
 
 .btn-sml {
-  padding: 0.1rem 0.25rem;
+  padding: var(--py-0_1) var(--px-0_25);
 }
 
 .btn-round {
-  border-radius: 0.9rem;
-}
-
-.btn:hover:not(:disabled),
-.btn-sml:hover:not(:disabled),
-.modal-close:hover:not(:disabled),
-.btn-round:hover:not(:disabled) {
-  filter: brightness(1.3);
+  border-radius: var(--rounded-xl);
 }
 
 .btn-txt,
 .btn-link {
-  --btn-hover-border-color: var(--dk-primary-color, var(--lt-primary-color));
-  --btn-focus-box-shadow: 0 0 0 0.25rem hsla(300, 100%, 93%, 0.35);
+  --btn-hover-border-color: var(--bg-primary);
+  --btn-focus-box-shadow: var(--ring-primary);
   background-color: transparent;
   border: none;
-  border-radius: 0.35rem;
-  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  border-radius: var(--rounded);
+  color: var(--color-on-bg);
   font: inherit;
   padding: 0;
 }
@@ -55,23 +48,25 @@
 
 .modal-close {
   --btn-hover-border-color: var(--dk-error-color, var(--lt-error-color));
-  --btn-focus-box-shadow: 0 0 0 0.25rem rgba(255, 62, 81, 0.35);
-  background-color: var(
-    --close-btn-bg-color,
-    var(--dk-error-color, var(--lt-error-color))
-  );
-  border: 1px solid transparent;
-  border-radius: 50%;
-  box-shadow: 0px 1px 3px 0px hsla(0deg 0% 8% / 15%);
+  --btn-focus-box-shadow: var(--ring-error);
+  background-color: var(--close-btn-bg-color, var(--bg-error));
+  border: var(--border-invisible);
+  border-radius: var(--rounded-full);
+  box-shadow: var(--shadow);
   cursor: pointer;
-  color: var(
-    --close-btn-color,
-    var(--dk-on-error-color, var(--lt-on-error-color))
-  );
-  font-size: 15px;
+  color: var(--close-btn-color, var(--color-on-error));
+  font: inherit;
   font-weight: bold;
   padding: 0 6px;
-  transition: border-color 0.15s linear, box-shadow 0.15s linear;
+  transition: border-color var(--duration-150) linear,
+    box-shadow var(--duration-150) linear;
+}
+
+.btn:hover:not(:disabled),
+.btn-sml:hover:not(:disabled),
+.modal-close:hover:not(:disabled),
+.btn-round:hover:not(:disabled) {
+  filter: var(--brightness-130);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -89,7 +84,7 @@
 .btn-link:focus-visible:not(:disabled),
 .btn-round:focus-visible:not(:disabled) {
   border-color: var(--btn-hover-border-color);
-  outline: 0;
+  outline: none;
   box-shadow: var(--btn-focus-box-shadow);
 }
 
@@ -97,13 +92,13 @@
   background-color: var(--dk-error-color, var(--lt-error-color));
   color: var(--dk-on-error-color, var(--lt-on-error-color));
   --btn-hover-border-color: var(--dk-error-color, var(--lt-error-color));
-  --btn-focus-box-shadow: 0 0 0 0.25rem rgba(255, 62, 81, 0.35);
+  --btn-focus-box-shadow: var(--ring-error);
 }
 
 .btn--acc {
   background-color: var(--dk-positive-color, var(--lt-positive-color));
   --btn-hover-border-color: var(--dk-positive-color, var(--lt-positive-color));
-  --btn-focus-box-shadow: 0 0 0 0.25rem rgba(98, 255, 106, 0.35);
+  --btn-focus-box-shadow: var(--ring-positive);
 }
 
 .btn:disabled,
@@ -111,7 +106,7 @@
 .btn-link:disabled,
 .modal-close:disabled,
 .btn-round:disabled {
-  filter: brightness(0.5);
+  filter: var(--brightness-50);
 }
 
 button:disabled {
