--- a/src/pages/util/form.css
+++ b/src/pages/util/form.css
@@ -1,53 +1,61 @@
 .form-control,
 .form-select,
 .form-number {
-  display: block;
-  width: 100%;
-  font: inherit;
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  transition: border-color 0.15s linear, box-shadow 0.15s linear;
-  background-color: var(--dk-bg-color-500, var(--lt-bg-color-100));
   background-clip: padding-box;
-  border: 1px solid transparent;
-  border-radius: 0.8rem;
-  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  background-color: var(--bg-form-control);
+  border: var(--border-invisible);
+  border-radius: var(--rounded-xl);
+  color: var(--color-on-bg);
+  display: block;
+  font: inherit;
+  transition: border-color var(--duration-150) linear,
+    box-shadow var(--duration-150) linear;
+  padding: var(--py-0_3) var(--px-0_75);
+  width: 100%;
 }
 
-.form-control,
-.form-number {
-  padding: 0.2rem 0.75rem;
+.form-select {
+  --select-icon-width: 16px;
+  --select-icon-height: 12px;
+  padding-right: calc(var(--select-icon-width) * 2.2 + var(--px-0_75));
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23e6e6e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right var(--px-0_75) center;
+  background-size: var(--select-icon-width) var(--select-icon-height);
 }
 
 .form-control::placeholder,
 .form-number::placeholder {
-  color: var(--dk-on-bg-color-100, var(--lt-on-bg-color-100));
+  color: var(--color-on-bg-100);
   opacity: 1;
 }
 
 .form-control:focus,
 .form-select:focus,
 .form-number:focus {
-  border-color: var(--dk-primary-color-300, var(--lt-primary-color-300));
+  border-color: var(--bg-primary-300);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem hsla(300, 100%, 93%, 0.35);
+  box-shadow: var(--ring-primary);
 }
 
 .form-control:disabled,
 .form-select:disabled,
 .form-number:disabled {
-  filter: brightness(0.85);
+  filter: var(--brightness-75);
   opacity: 1;
 }
 
 .form-control:not(:placeholder-shown):invalid {
+  --control-error-icon-size: 1.25rem;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23eb5d5d'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23eb5d5d' stroke='none'/%3e%3c/svg%3e");
-  background-position: right calc(0.375em + 0.1875rem) center;
+  background-position: right calc(var(--control-error-icon-size) * 0.5) center;
   background-repeat: no-repeat;
-  background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background-size: var(--control-error-icon-size) var(--control-error-icon-size);
   border-color: var(--dk-error-color);
-  padding-right: calc(1.5em + 0.75rem);
+  padding-right: calc(var(--control-error-icon-size) * 1.6);
 }
 
 .form-number:not(:placeholder-shown):invalid {
@@ -57,16 +65,7 @@
 .form-control:not(:placeholder-shown):invalid:focus,
 .form-number:not(:placeholder-shown):invalid:focus {
   border-color: var(--dk-error-color);
-  box-shadow: 0 0 0 0.25rem rgba(255, 62, 81, 0.35);
-}
-
-.form-select {
-  padding: 0.2rem 2.25rem 0.2rem 0.75rem;
-  -moz-padding-start: calc(0.75rem - 3px);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23e6e6e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
-  background-repeat: no-repeat;
-  background-position: right 0.75rem center;
-  background-size: 16px 12px;
+  box-shadow: var(--ring-error);
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -81,9 +80,4 @@
   margin-bottom: 0.3rem;
   font-size: 0.85rem;
   font-weight: 300;
-}
-
-.hide-form-label {
-  position: absolute;
-  left: -999rem;
 }
