--- a/src/pages/util/vars-utilities.css
+++ b/src/pages/util/vars-utilities.css
@@ -1,8 +1,17 @@
+/* moving towards a utility-first approach, not having @apply (tailwind) these
+variables (for not magic numbers) are used to keep extracted component
+consistent with the utilities */
+
 :root {
-  /** _____________________ Backgrounds ____________________ */
+  /** _____________________ Colors ____________________ */
   --bg-primary: var(--dk-primary-color, var(--lt-primary-color));
   --bg-error: var(--dk-error-color, var(--lt-error-color));
   --bg-positive: var(--dk-positive-color, var(--lt-positive-color));
+  --bg-form-control: var(--dk-bg-color-500, var(--lt-bg-color));
+  --bg-primary-300: var(--dk-primary-color-300, var(--lt-primary-color-300));
+  --color-on-bg: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  --color-on-bg-100: var(--dk-on-bg-color-100, var(--lt-on-bg-color-100));
+  --color-on-error: var(--dk-on-error-color, var(--lt-on-error-color));
 
   /** _____________________ BORDERS __________________ */
   --border-invisible: 1px solid transparent;
@@ -27,12 +36,9 @@
   --ring-error: 0 0 0 0.25rem rgba(255, 62, 80, 0.35);
   --ring-positive: 0 0 0 0.25rem rgba(98, 255, 106, 0.35);
 
-  /* _____________________ Typography _______________ */
-  --color-on-bg: var(--dk-on-bg-color, var(--lt-on-bg-color));
-  --color-on-error: var(--dk-on-error-color, var(--lt-on-error-color));
-
   /*_______________________ FILTERS __________________ */
   --brightness-130: brightness(1.3);
+  --brightness-75: brightness(0.75);
   --brightness-50: brightness(0.5);
 
   /* _____________________ TRANSITIONS _________________ */
