--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,2 +1,129 @@
-@import "util/main.css";
-@import "util/vars-utilities.css";
+:root {
+  --header-height: 3.5rem;
+  --footer-height: 2.5rem;
+
+  --lt-bg-color: hsl(275deg, 4%, 100%);
+  --lt-bg-color-100: hsl(275deg, 4%, 95%);
+  --lt-bg-color-200: hsl(275deg, 4%, 90%);
+  --lt-bg-color-300: hsl(275deg, 4%, 85%);
+  --lt-on-bg-color: hsl(0, 0%, 12%);
+  --lt-on-bg-color-50: hsl(0, 0%, 18%);
+  --lt-on-bg-color-100: hsl(0, 0%, 24%);
+
+  /* TODO: pick a color for every one below */
+  --lt-primary-color: hsl(276, 93%, 84%);
+  --lt-primary-color-700: hsl(279, 43%, 63%);
+  --lt-primary-color-300: hsl(300, 100%, 93%);
+  --lt-on-primary-color: var(--lt-on-bg-color);
+  --lt-secondary-color: #a8d085;
+  --lt-positive-color: #76db8c;
+  --lt-on-positive-color: var(--lt-on-bg-color);
+  --lt-positive-color-tsp-300: hsla(133, 58%, 66%, 0.7);
+  --lt-error-color: #eb5d5d;
+  --lt-on-error-color: black;
+  --lt-neutral-color: #e1c457;
+
+  --pitch-color: #195905;
+
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: clamp(13px, 2vw, 16px);
+  line-height: 1.4;
+}
+
+/* default mode */
+:root.dark {
+  --dk-bg-color: hsl(275deg, 4%, 16%);
+  --dk-bg-color-750: hsl(275deg, 4%, 20%);
+  --dk-bg-color-725: hsl(275deg, 4%, 22%);
+  --dk-bg-color-700: hsl(275deg, 4%, 24%);
+  --dk-bg-color-650: hsl(275deg, 4%, 28%);
+  --dk-bg-color-600: hsl(275deg, 4%, 32%);
+  --dk-bg-color-500: hsl(275deg, 4%, 40%);
+  --dk-bg-color-300: hsl(275deg, 4%, 56%);
+  --dk-on-bg-color: hsl(0, 0%, 100%);
+  --dk-on-bg-color-50: hsl(0, 0%, 95%);
+  --dk-on-bg-color-100: hsl(0, 0%, 90%);
+
+  /* TODO: pick a color for every one below */
+  --dk-primary-color: var(--lt-primary-color);
+  --dk-primary-color-700: var(--lt-primary-color-700);
+  --dk-primary-color-300: var(--lt-primary-color-300);
+  --dk-on-primary-color: var(--lt-on-bg-color);
+  --dk-secondary-color: var(--lt-secondary-color);
+  --dk-positive-color: var(--lt-positive-color);
+  --dk-on-positive-color: var(--lt-on-bg-color);
+  --dk-positive-color-tsp-300: var(--lt-positive-color-tsp-300);
+  --dk-error-color: var(--lt-error-color);
+  --dk-on-error-color: hsl(275deg, 4%, 8%);
+  --dk-neutral-color: var(--lt-neutral-color);
+}
+
+body {
+  background-color: var(--dk-bg-color, var(--lt-bg-color));
+  color: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  margin: 0;
+}
+
+h1,
+h2 {
+  line-height: 1.1;
+}
+
+h3,
+h4 {
+  line-height: 1.25;
+}
+
+.cnt-404 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* moving towards a utility-first approach, these variables (for not magic numbers)
+are used to keep extracted component consistent with the utilities.
+I would use an @apply function (like tailwind), but with the shadowDom and
+multiple files it isn't really possible */
+
+:root {
+  /** _____________________ Colors ____________________ */
+  --bg-primary: var(--dk-primary-color, var(--lt-primary-color));
+  --bg-error: var(--dk-error-color, var(--lt-error-color));
+  --bg-positive: var(--dk-positive-color, var(--lt-positive-color));
+  --bg-form-control: var(--dk-bg-color-500, var(--lt-bg-color));
+  --bg-primary-300: var(--dk-primary-color-300, var(--lt-primary-color-300));
+  --color-on-bg: var(--dk-on-bg-color, var(--lt-on-bg-color));
+  --color-on-bg-100: var(--dk-on-bg-color-100, var(--lt-on-bg-color-100));
+  --color-on-error: var(--dk-on-error-color, var(--lt-on-error-color));
+
+  /** _____________________ BORDERS __________________ */
+  --border-invisible: 1px solid transparent;
+  --rounded-sm: 0.1rem;
+  --rounded: 0.3rem;
+  --rounded-xl: 0.9rem;
+  --rounded-full: 50%;
+
+  /** _______________ BOX SPACING __________________ */
+  /**
+    padding: p{direction}-{size in rem, underscore for .} --> pr-0_5 === padding-right: 0.5rem
+    or p{direction}-{size in px}x --> pr-1x === padding-right: 1px
+    when no direction is specified set all sides */
+  --py-0_3: 0.3rem;
+  --px-0_75: 0.75rem;
+  --py-0_1: 0.1rem;
+  --px-0_25: 0.25rem;
+
+  /** ______________ EFFECTS _________________*/
+  --shadow: 0px 1px 3px 0px hsl(0deg 0% 5% / 20%);
+  --ring-primary: 0 0 0 0.25rem hsla(300, 100%, 90%, 0.35);
+  --ring-error: 0 0 0 0.25rem rgba(255, 62, 80, 0.35);
+  --ring-positive: 0 0 0 0.25rem rgba(98, 255, 106, 0.35);
+
+  /*_______________________ FILTERS __________________ */
+  --brightness-130: brightness(1.3);
+  --brightness-75: brightness(0.75);
+  --brightness-50: brightness(0.5);
+
+  /* _____________________ TRANSITIONS _________________ */
+  --duration-150: 150ms;
+}
