--- a/src/pages/util/utilities.css
+++ b/src/pages/util/utilities.css
@@ -32,3 +32,47 @@
   position: absolute;
   left: -999rem;
 }
+
+/** ______________ Typography ______________ **/
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+/* ___________________Sizing____________________ */
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+/*________________________Flexbox & Grid___________*/
+
+.self-center {
+  align-self: center;
+}
