--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -80,7 +80,7 @@ h4 {
   align-items: center;
 }
 
-/* moving towards a utility-first approach, these variables (for not magic numbers)
+/* moving towards adding utilities, these variables (for not magic numbers)
 are used to keep extracted component consistent with the utilities.
 I would use an @apply function (like tailwind), but with the shadowDom and
 multiple files it isn't really possible */
@@ -92,6 +92,7 @@ multiple files it isn't really possible */
   --bg-positive: var(--dk-positive-color, var(--lt-positive-color));
   --bg-form-control: var(--dk-bg-color-500, var(--lt-bg-color));
   --bg-primary-300: var(--dk-primary-color-300, var(--lt-primary-color-300));
+  --bg-700: var(--dk-bg-color-700, var(--lt-bg-color-300));
   --color-on-bg: var(--dk-on-bg-color, var(--lt-on-bg-color));
   --color-on-bg-100: var(--dk-on-bg-color-100, var(--lt-on-bg-color-100));
   --color-on-error: var(--dk-on-error-color, var(--lt-on-error-color));
