--- a/src/pages/util/dialog.css
+++ b/src/pages/util/dialog.css
@@ -5,7 +5,8 @@ dialog {
   box-shadow: 0px 2px 4px 0px hsl(0deg 0% 4% / 40%);
   color: var(--dk-on-bg-color, var(--lt-on-bg-color));
   max-width: 99vw;
-  max-height: 99vh;
+  /* menus the mobile nav bar  */
+  max-height: calc(99vh - 4.5rem);
   padding: 6px 1rem 1rem 1rem;
 }
 
