add favicon and font

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,7 +25,7 @@
 
   --pitch-color: #195905;
 
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Raleway", sans-serif;
   font-size: clamp(13px, 2vw, 16px);
   line-height: 1.5;
 }
