--- a/src/pages/util/form.css
+++ b/src/pages/util/form.css
@@ -7,7 +7,7 @@
   background-clip: padding-box;
   background-color: var(--bg-form-control);
   border: var(--border-invisible);
-  border-radius: var(--rounded-xl);
+  border-radius: var(--rounded-2xl);
   color: var(--color-on-bg);
   display: block;
   font: inherit;
@@ -17,10 +17,14 @@
   width: 100%;
 }
 
+.form-number {
+  -moz-appearance: textfield;
+}
+
 .form-select {
-  --select-icon-width: 16px;
-  --select-icon-height: 12px;
-  padding-right: calc(var(--select-icon-width) * 2.2 + var(--px-0_75));
+  --select-icon-width: 1rem;
+  --select-icon-height: 0.75rem;
+  padding-right: calc(var(--select-icon-width) * 1.5 + var(--px-0_75));
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23e6e6e6' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right var(--px-0_75) center;
@@ -36,7 +40,7 @@
 .form-control:focus,
 .form-select:focus,
 .form-number:focus {
-  border-color: var(--bg-primary-300);
+  border-color: var(--primary-color-300);
   outline: 0;
   box-shadow: var(--ring-primary);
 }
