--- a/src/pages/util/utilities.css
+++ b/src/pages/util/utilities.css
@@ -10,6 +10,10 @@
   background-color: var(--bg-650);
 }
 
+.bg-primary-300 {
+  background-color: var(--primary-color-300);
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -84,8 +88,22 @@
   font-weight: 300;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .leading-5 {
   line-height: 1.25;
+}
+
+.text-center {
+  text-align: center;
+}
+
+/*___________________ border _________________ */
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 /* ___________________Sizing____________________ */
@@ -104,6 +122,10 @@
 
 .h-6 {
   height: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-max {
