--- a/src/pages/common/menu-bar.css
+++ b/src/pages/common/menu-bar.css
@@ -7,7 +7,8 @@
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
   display: flex;
   gap: 0.5rem;
-  padding: 3px 8px;
+  height: var(--menu-bar-height);
+  padding: 0 8px;
   position: sticky;
   top: var(--header-height);
   z-index: 1;
