--- a/src/pages/util/utilities.css
+++ b/src/pages/util/utilities.css
@@ -2,6 +2,10 @@
 
 /*_______________ colors ________________*/
 
+.bg-750 {
+  background-color: var(--bg-750);
+}
+
 .bg-700 {
   background-color: var(--bg-700);
 }
@@ -24,24 +28,29 @@
   or p{direction}-{size in px}x --> pr-1x === padding-right: 1px
   when no direction is specified set all sides */
 
-.py-0_3 {
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
+.py-1 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
-.px-0_75 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-2 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
-.py-0_1 {
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
-}
-
-.px-0_25 {
+.px-2 {
   padding-left: 0.25rem;
   padding-right: 0.25em;
+}
+
+.px-4 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-6 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 /** _______________ LAYOUT _________________**/
@@ -55,8 +64,20 @@
   display: grid;
 }
 
+.flex {
+  display: flex;
+}
+
 .absolute {
   position: absolute;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.z-2 {
+  z-index: 2;
 }
 
 /* underscore for percentage */
@@ -66,6 +87,10 @@
 
 .left-2 {
   left: 0.375rem;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 /** ______________ Typography ______________ **/
@@ -102,8 +127,32 @@
 
 /*___________________ border _________________ */
 
+.border-0 {
+  border-width: 0px;
+}
+
+.border-b-1 {
+  border-bottom-width: 1px;
+}
+
+.border-l-1 {
+  border-left-width: 1px;
+}
+
+.border-bg-500 {
+  border-color: var(--bg-500);
+}
+
+.border-solid {
+  border-style: solid;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-bl-xl {
+  border-bottom-left-radius: 0.75rem;
 }
 
 /* ___________________Sizing____________________ */
@@ -132,6 +181,18 @@
   width: max-content;
 }
 
+.max-w-max {
+  max-width: max-content;
+}
+
+.max-w-prose {
+  max-width: 65ch;
+}
+
+.mt-24 {
+  margin-top: 3rem;
+}
+
 /*________________________Flexbox & Grid___________*/
 
 .self-center {
@@ -149,6 +210,10 @@
 }
 
 .gap-2 {
+  gap: 0.25rem;
+}
+
+.gap-4 {
   gap: 0.5rem;
 }
 
@@ -156,6 +221,10 @@
 
 .shadow-none {
   box-shadow: none;
+}
+
+.shadow {
+  box-shadow: var(--shadow);
 }
 
 /* ____________________ transform _______________ */
