--- a/src/pages/util/utilities.css
+++ b/src/pages/util/utilities.css
@@ -28,6 +28,10 @@
   or p{direction}-{size in px}x --> pr-1x === padding-right: 1px
   when no direction is specified set all sides */
 
+.p-1 {
+  padding: 0.125rem;
+}
+
 .py-1 {
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
@@ -53,6 +57,14 @@
   padding-right: 0.75rem;
 }
 
+.pr-2 {
+  padding-right: 0.25em;
+}
+
+.pl-2 {
+  padding-left: 0.25em;
+}
+
 /** _______________ LAYOUT _________________**/
 
 .hide {
@@ -70,6 +82,10 @@
 
 .absolute {
   position: absolute;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .fixed {
@@ -117,12 +133,20 @@
   font-weight: 700;
 }
 
+.leading-4 {
+  line-height: var(--leading-4);
+}
+
 .leading-5 {
   line-height: 1.25;
 }
 
 .text-center {
   text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 /*___________________ border _________________ */
@@ -155,26 +179,42 @@
   border-bottom-left-radius: 0.75rem;
 }
 
+.rounded-full {
+  border-radius: var(--rounded-full);
+}
+
 /* ___________________Sizing____________________ */
+
+.w-4 {
+  width: 1rem;
+}
 
 .w-5 {
   width: 1.25rem;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .w-6 {
   width: 1.5rem;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
 
-.w-7 {
-  width: 1.75rem;
+.h-auto {
+  height: auto;
 }
 
 .w-max {
@@ -199,6 +239,10 @@
   align-self: center;
 }
 
+.self-start {
+  align-self: flex-start;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -215,6 +259,10 @@
 
 .gap-4 {
   gap: 0.5rem;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 /* __________________ effect ________________*/
