--- a/src/pages/common/game-nav.css
+++ b/src/pages/common/game-nav.css
@@ -18,11 +18,6 @@ ul {
 
 li {
   list-style-type: none;
-  transition: background-color 0.2s;
-}
-
-li:hover {
-  background-color: var(--dk-primary-color, var(--lt-primary-color));
 }
 
 a {
@@ -31,7 +26,7 @@ a {
   cursor: pointer;
   height: 100%;
   padding: 0.5rem 1rem;
-  transition: color 0.25s;
+  transition: color 0.2s linear;
   width: 100%;
   text-decoration: none;
   text-transform: capitalize;
@@ -42,8 +37,7 @@ a {
 }
 
 li:hover > a {
-  box-shadow: 0px 1px 3px 0px hsla(0deg, 0%, 8%, 0.15);
-  color: var(--dk-on-primary-color, var(--lt-on-primary-color));
+  color: var(--dk-on-bg-color-300, var(--lt-on-bg-color-300));
 }
 
 .inbox > a > span,
